Добавляет звезды через фон

--- a/catalog.html
+++ b/catalog.html
@@ -192,10 +192,7 @@
             <span class="product-card-price">От 4000 ₽</span>
             <a class="product-card-button button-state" href="#">Подробнее</a>
             <a class="product-card-button-favorites" href="#">В избранноe</a>
-            <div class="stars"><svg aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg" width="18"
-                height="17" fill="none" viewBox="0 0 18 17">
-                <path fill="#83B3D3" d="m9 0 2.1 6.5H18l-5.6 4 2.2 6.5L9 13l-5.6 4 2.2-6.5-5.6-4h6.9L9 0Z" />
-              </svg></div>
+            <div class="stars stars-four"></div>
             <div class="rating">Рейтинг: 8,5</div>
           </li>
           <li class="product-card">
@@ -207,10 +204,7 @@
             <span class="product-card-price">От 5000 ₽</span>
             <a class="product-card-button" href="#">Подробнее</a>
             <a class="product-card-button-favorites button-active" href="#">В избранноe</a>
-            <div class="stars"><svg aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg" width="18"
-                height="17" fill="none" viewBox="0 0 18 17">
-                <path fill="#83B3D3" d="m9 0 2.1 6.5H18l-5.6 4 2.2 6.5L9 13l-5.6 4 2.2-6.5-5.6-4h6.9L9 0Z" />
-              </svg></div>
+            <div class="stars stars-four"></div>
             <div class="rating">Рейтинг: 9,2</div>
           </li>
           <li class="product-card">
@@ -222,10 +216,7 @@
             <span class="product-card-price">От 2500 ₽</span>
             <a class="product-card-button" href="#">Подробнее</a>
             <a class="product-card-button-favorites" href="#">В избранноe</a>
-            <div class="stars"><svg aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg" width="18"
-                height="17" fill="none" viewBox="0 0 18 17">
-                <path fill="#83B3D3" d="m9 0 2.1 6.5H18l-5.6 4 2.2 6.5L9 13l-5.6 4 2.2-6.5-5.6-4h6.9L9 0Z" />
-              </svg></div>
+            <div class="stars stars-three"></div>
             <div class="rating">Рейтинг: 6,9</div>
           </li>
           <li class="product-card">
@@ -237,10 +228,7 @@
             <span class="product-card-price">От 1500 ₽</span>
             <a class="product-card-button" href="#">Подробнее</a>
             <a class="product-card-button-favorites" href="#">В избранноe</a>
-            <div class="stars"><svg aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg" width="18"
-                height="17" fill="none" viewBox="0 0 18 17">
-                <path fill="#83B3D3" d="m9 0 2.1 6.5H18l-5.6 4 2.2 6.5L9 13l-5.6 4 2.2-6.5-5.6-4h6.9L9 0Z" />
-              </svg></div>
+            <div class="stars stars-two"></div>
             <div class="rating">Рейтинг: 5,0</div>
           </li>
         </ul>
