--- a/8/catalog.html
+++ b/8/catalog.html
@@ -23,16 +23,15 @@
               <li class="site-navigation-item">
                 <a class="navigation-link" href="about.html">О седоне</a>
               </li>
-              <li class="site-navigation-item active">
-                <a class="navigation-link" href="catalog.html">Гостиницы</a>
+              <li class="site-navigation-item">
+                <a class="navigation-link active-link" href="catalog.html">Гостиницы</a>
               </li>
             </ul>
             <ul class="menu">
               <li class="menu-item">
                 <a class="menu-link" href="#">
-                  <svg aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg" width="20" height="20"
-                    fill="none">
-                    <path fill="#000"
+                  <svg aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg" width="20" height="20">
+                    <path fill="currentColor"
                       d="m18.5 17-3.7-3.67a8 8 0 0 0 1.7-4.87A8 8 0 0 0 8.5.5C4.1.5.5 4.18.5 8.56a8 8 0 0 0 12.9 6.26l3.7 3.68 1.4-1.5Zm-10-2.48a6 6 0 0 1-6-5.96 6 6 0 0 1 12 0 6 6 0 0 1-6 5.96Z" />
                   </svg>
                   <span class="visually-hidden">Поиск гостиницы</span>
@@ -40,9 +39,8 @@
               </li>
               <li class="menu-item">
                 <a class="menu-link" href="#">
-                  <svg aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg" width="20" height="20"
-                    fill="none">
-                    <path fill="#000"
+                  <svg aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg" width="20" height="20">
+                    <path fill="currentColor"
                       d="M9.9 19a.9.9 0 0 1-.8-.4c-5.4-6.1-6.7-7.5-7-7.9A5.4 5.4 0 0 1 6.5 2C7.8 2 9 2.5 10 3.3a5.46 5.46 0 0 1 9 4.1c0 1.3-.5 2.5-1.3 3.4l-7 7.9c-.2.2-.4.3-.8.3Zm-6-9.5c.3.4 3.5 4 6.1 6.9l6.2-7c.5-.5.7-1.2.7-2 0-1.8-1.5-3.3-3.3-3.3-1 0-2 .5-2.7 1.3-.3.3-.6.4-.9.4-.3 0-.6-.2-.8-.4-.7-.8-1.7-1.3-2.7-1.3-1.8 0-3.3 1.5-3.3 3.3-.1.9.3 1.6.7 2.1-.1 0-.1 0 0 0Z" />
                   </svg>
                   <span class="visually-hidden">избранное</span>
@@ -63,10 +61,10 @@
             <ul class="breadcrumbs-list">
               <li class="breadcrumbs-item">
                 <a class="breadcrumbs-link" href="index.html">
-                  <svg aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg" width="13" height="13"
-                    fill="none">
-                    <path fill="#fff" d="m6.5.5-6 5.8v6.2h12V6.3L6.5.5Zm5 11h-10V6.7l5-4.8 5 4.8v4.8Z" />
-                    <path fill="#fff" d="M4.5 10.5h1V8h2v2.5h1V7h-4v3.5Z" />
+                  <svg class="breadcrumbs-link" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg"
+                    width="13" height="13">
+                    <path fill="currentColor" d="m6.5.5-6 5.8v6.2h12V6.3L6.5.5Zm5 11h-10V6.7l5-4.8 5 4.8v4.8Z" />
+                    <path fill="currentColor" d="M4.5 10.5h1V8h2v2.5h1V7h-4v3.5Z" />
                   </svg>
                   <span class="visually-hidden">Главная</span>
                 </a>
@@ -124,21 +122,21 @@
                 </ul>
               </fieldset>
               <div class="button-container-filter">
-                <button class="button-catalog-filter button-submit button-state" type="submit">Применить</button>
-                <button class="button-catalog-filter button-reset button-state " type="reset">Сбросить</button>
+                <button class="button-catalog-filter button-submit " type="submit">Применить</button>
+                <button class="button-catalog-filter button-reset" type="reset">Сбросить</button>
               </div>
             </form>
           </div>
         </section>
         <div class="select-container">
           <p class="page-search">Найдено гостиниц: <span>38</span></p>
-          <select class="select-control border-state" aria-label="Сортировка">
+          <select class="select-control" aria-label="Сортировка">
             <option value="cheap">Сначала дешёвые</option>
             <option value="expensive">Сначала дорогие</option>
             <option value="rating">По рейтингу</option>
           </select>
           <div class="button-filter-container">
-            <a href="#" class="button-filter button-filter-state">
+            <a href="#" class="button-filter">
               <svg aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg" width="16" height="14"
                 fill="none">
                 <g fill="#000" clip-path="url(#a)">
@@ -152,7 +150,7 @@
               </svg>
               <span class="visually-hidden">Показать карточки</span>
             </a>
-            <a href="#" class="button-filter button-filter-state">
+            <a href="#" class="button-filter">
               <svg aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg" width="16" height="14"
                 fill="none">
                 <g fill="#000" clip-path="url(#a)">
@@ -192,11 +190,8 @@
             <p>Гостиница</p>
             <span class="product-card-price">От 4000 ₽</span>
             <a class="product-card-button button-state" href="#">Подробнее</a>
-            <a class="product-card-button-favorites button-state" href="#">В избранноe</a>
-            <div class="stars"><svg aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg" width="18"
-                height="17" fill="none" viewBox="0 0 18 17">
-                <path fill="#83B3D3" d="m9 0 2.1 6.5H18l-5.6 4 2.2 6.5L9 13l-5.6 4 2.2-6.5-5.6-4h6.9L9 0Z" />
-              </svg></div>
+            <a class="product-card-button-favorites" href="#">В избранноe</a>
+            <div class="stars stars-four"></div>
             <div class="rating">Рейтинг: 8,5</div>
           </li>
           <li class="product-card">
@@ -206,12 +201,9 @@
             </a>
             <p>Гостиница</p>
             <span class="product-card-price">От 5000 ₽</span>
-            <a class="product-card-button button-state" href="#">Подробнее</a>
-            <a class="product-card-button-favorites button-state" href="#">В избранноe</a>
-            <div class="stars"><svg aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg" width="18"
-                height="17" fill="none" viewBox="0 0 18 17">
-                <path fill="#83B3D3" d="m9 0 2.1 6.5H18l-5.6 4 2.2 6.5L9 13l-5.6 4 2.2-6.5-5.6-4h6.9L9 0Z" />
-              </svg></div>
+            <a class="product-card-button" href="#">Подробнее</a>
+            <a class="product-card-button-favorites button-active" href="#">В избранноe</a>
+            <div class="stars stars-four"></div>
             <div class="rating">Рейтинг: 9,2</div>
           </li>
           <li class="product-card">
@@ -221,12 +213,9 @@
             </a>
             <p>Гостиница</p>
             <span class="product-card-price">От 2500 ₽</span>
-            <a class="product-card-button button-state" href="#">Подробнее</a>
-            <a class="product-card-button-favorites button-state" href="#">В избранноe</a>
-            <div class="stars"><svg aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg" width="18"
-                height="17" fill="none" viewBox="0 0 18 17">
-                <path fill="#83B3D3" d="m9 0 2.1 6.5H18l-5.6 4 2.2 6.5L9 13l-5.6 4 2.2-6.5-5.6-4h6.9L9 0Z" />
-              </svg></div>
+            <a class="product-card-button" href="#">Подробнее</a>
+            <a class="product-card-button-favorites" href="#">В избранноe</a>
+            <div class="stars stars-three"></div>
             <div class="rating">Рейтинг: 6,9</div>
           </li>
           <li class="product-card">
@@ -236,18 +225,15 @@
             </a>
             <p>Гостиница</p>
             <span class="product-card-price">От 1500 ₽</span>
-            <a class="product-card-button button-state" href="#">Подробнее</a>
-            <a class="product-card-button-favorites button-state" href="#">В избранноe</a>
-            <div class="stars"><svg aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg" width="18"
-                height="17" fill="none" viewBox="0 0 18 17">
-                <path fill="#83B3D3" d="m9 0 2.1 6.5H18l-5.6 4 2.2 6.5L9 13l-5.6 4 2.2-6.5-5.6-4h6.9L9 0Z" />
-              </svg></div>
+            <a class="product-card-button" href="#">Подробнее</a>
+            <a class="product-card-button-favorites" href="#">В избранноe</a>
+            <div class="stars stars-two"></div>
             <div class="rating">Рейтинг: 5,0</div>
           </li>
         </ul>
         <ul class="pagination">
           <li class="pagination-item">
-            <a class="pagination-link > href="catalog.html">1</a>
+            <a class="pagination-link  pagination-active" href="#">1</a>
           </li>
           <li class="pagination-item">
             <a class="pagination-link" href="#">2</a>
@@ -259,7 +245,7 @@
             <a class="pagination-link" href="#">4</a>
           </li>
           <li class="pagination-item">
-            <a class="pagination-link" href="#">...</a>
+            <a class="pagination-link ellipses" href="#">...</a>
           </li>
           <li class="pagination-item">
             <a class="pagination-link" href="#">10</a>
@@ -281,25 +267,42 @@
       </main>
       <footer class="main-footer">
         <ul class="social-list">
-          <li class="social-item social-item-vk">
+          <li class="social-item">
             <a href="https://vk.com/htmlacademy">
+              <svg xmlns="http://www.w3.org/2000/svg" width="25" height="15">
+                <path fill="currentColor" fill-rule="evenodd"
+                  d="M24.12 1.8c.16-.54 0-.94-.8-.94H20.7c-.67 0-.98.34-1.15.73 0 0-1.33 3.2-3.22 5.27-.61.6-.9.8-1.23.8-.16 0-.41-.2-.41-.75v-5.1c0-.66-.19-.95-.74-.95H9.82c-.42 0-.67.3-.67.59 0 .62.95.76 1.04 2.51v3.8c0 .83-.15.98-.48.98-.9 0-3.06-3.2-4.34-6.88-.25-.72-.5-1-1.18-1H1.57c-.75 0-.9.34-.9.73 0 .68.89 4.07 4.14 8.55 2.17 3.06 5.23 4.72 8 4.72 1.68 0 1.88-.37 1.88-1v-2.32c0-.74.16-.88.7-.88.38 0 1.05.19 2.6 1.66 1.79 1.75 2.08 2.54 3.08 2.54h2.63c.75 0 1.12-.37.9-1.1-.23-.72-1.08-1.77-2.2-3.02-.62-.71-1.54-1.48-1.82-1.86-.39-.5-.28-.71 0-1.15 0 0 3.2-4.42 3.54-5.93Z"
+                  clip-rule="evenodd" />
+              </svg>
+
               <span class="visually-hidden">Vk</span>
             </a>
           </li>
-          <li class="social-item social-item-tg">
+          <li class="social-item">
             <a href="https://t.me/htmlacademy">
+              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="14">
+                <path fill="currentColor"
+                  d="M16.79.96.84 7.1c-1.09.44-1.08 1.05-.2 1.32l4.1 1.28 9.47-5.98c.44-.27.85-.13.52.17l-7.68 6.93-.28 4.22c.41 0 .6-.2.83-.41l1.99-1.94 4.13 3.06c.77.42 1.31.2 1.5-.71l2.72-12.8c.28-1.1-.43-1.61-1.16-1.28Z" />
+              </svg>
               <span class="visually-hidden">TG</span>
             </a>
           </li>
-          <li class="social-item social-item-yt">
+          <li class="social-item">
             <a href="https://www.youtube.com/user/htmlacademyru">
+              <svg xmlns="http://www.w3.org/2000/svg" width="23" height="18">
+                <path fill="currentColor"
+                  d="M18.94.36H3.51C1.65.36.33 1.95.33 3.76v10.09c0 1.91 1.32 3.5 3.18 3.5h15.65c1.64 0 3.17-1.59 3.17-3.4V3.76c-.22-1.8-1.53-3.4-3.39-3.4ZM7.99 12.89V4.82l7.34 4.04-7.34 4.03Z" />
+              </svg>
               <span class="visually-hidden">YT</span>
             </a>
           </li>
         </ul>
         <a class="contacts-phone" href="tel:+78128121212">+7(812)812-12-12</a>
         <a class="logo-academy" href="https://htmlacademy.ru/">
-          <img src="images/htmlacademy.svg" width="115" height="33" alt="Логотип HTML-academy">
+          <svg xmlns="http://www.w3.org/2000/svg" width="115" height="34">
+            <path fill="currentColor"
+              d="M0 13.26v2.6h2.5v-2.6H0Zm11.6-8.4c-1.6 0-2.8.7-3.6 1.7h-.1V.36h-2v15.5h2v-5.3c0-2.1 1.3-3.6 3.3-3.6 1.8 0 2.9 1.4 2.9 3.2v5.7h2v-6.1c.1-3-1.8-4.9-4.5-4.9Zm15 .3h-4.8v-3.7h-2v3.8h-1.9v2h1.9v6c0 1.7 1 2.7 2.7 2.7h4.1v-2h-3.7c-.7 0-1.1-.4-1.1-1.1v-5.7h4.8v-2Zm14.5-.2c-1.6 0-2.9.8-3.5 2.1h-.1c-.6-1.2-1.8-2.1-3.4-2.1-1.4 0-2.5.8-3.1 1.8h-.1v-1.6H29v10.6h2v-5.4c0-2 1-3.5 2.6-3.5 1.5 0 2.4 1 2.4 2.6v6.3h2v-5.6c0-2.4 1.4-3.3 2.6-3.3 1.5 0 2.4 1 2.4 2.6v6.3h2v-6.5c.1-2.5-1.4-4.3-3.9-4.3Zm6.7 8.1c0 1.7 1 2.7 2.8 2.7h2v-2h-1.7c-.7 0-1.1-.4-1.1-1.1V.36h-2v12.7Zm-18.9 7c-.9-1.1-2.2-1.8-3.9-1.8-3.1 0-5.4 2.3-5.4 5.6s2.3 5.6 5.4 5.6c1.8 0 3-.8 3.8-1.9h.1v1.6h2v-10.6h-2v1.5Zm-3.6 7.4c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6 3.6 1.6 3.6 3.6c0 1.9-1.4 3.6-3.6 3.6Zm18.9-5.1c-.5-2.4-2.6-4.1-5.4-4.1a5.4 5.4 0 0 0-5.6 5.6c0 3.1 2.2 5.6 5.6 5.6 2.8 0 4.9-1.8 5.4-4.2h-2.1a3.4 3.4 0 0 1-3.3 2.3c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6c1.6 0 2.8 1 3.3 2.2h2.1v-.2Zm10.9-2.3c-.9-1.1-2.2-1.8-3.9-1.8-3.1 0-5.4 2.3-5.4 5.6s2.3 5.6 5.4 5.6c1.8 0 3-.8 3.8-1.9h.1v1.6h2v-10.6h-2v1.5Zm-3.6 7.4c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6 3.6 1.6 3.6 3.6c0 1.9-1.5 3.6-3.6 3.6Zm17.2-7.3c-.9-1.1-2.2-1.9-3.9-1.9-3.1 0-5.4 2.3-5.4 5.6s2.2 5.6 5.4 5.6c1.7 0 3-.8 3.8-1.8h.1v1.5h2v-15.4h-2v6.4Zm-3.6 7.3c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6 3.6 1.6 3.6 3.6c-.1 2-1.5 3.6-3.6 3.6Zm13.2-9.2c-3.3 0-5.5 2.5-5.5 5.6 0 3 2.1 5.6 5.5 5.6 2.5 0 4.5-1.3 5.2-3.6h-2.1c-.5 1-1.6 1.6-3 1.6-1.9 0-3.3-1.3-3.4-2.9h8.8c.2-3.6-2-6.3-5.5-6.3Zm0 1.9c1.7 0 3 1 3.3 2.6h-6.5c.3-1.5 1.5-2.6 3.2-2.6Zm19.9-1.9c-1.6 0-2.9.8-3.6 2h-.1c-.6-1.2-1.8-2-3.4-2-1.4 0-2.5.7-3.1 1.8v-1.5h-1.9v10.6h2v-5.4c0-2 1-3.4 2.6-3.5 1.5 0 2.4 1 2.4 2.6v6.3h2v-5.6c0-2.4 1.4-3.3 2.6-3.3 1.5 0 2.4 1 2.4 2.6v6.3h2v-6.5c.1-2.6-1.4-4.4-3.9-4.4Zm11.2 9.1-3.6-8.9h-2.2l4.8 11.6c-.3.9-.7 1.2-1.7 1.2h-2.5v2h2.5c1.8 0 2.8-.8 3.5-2.6l4.7-12.2h-2.1l-3.4 8.9Z" />
+          </svg>
         </a>
       </footer>
     </div>
