--- a/8/index.html
+++ b/8/index.html
@@ -103,17 +103,23 @@
             <p>Опытный персонал и качественное обслуживание!</p>
           </div>
           <ul class="services-list">
-            <li class="services-item services-item-house">
-              <h3>Жилье</h3>
-              <p>Рекомендуем пожить в настоящем мотеле,всё как в кино!</p>
+            <li class="services-item">
+              <div class="services-item-house">
+                <h3>Жилье</h3>
+                <p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+              </div>
             </li>
-            <li class="services-item services-item-food">
-              <h3>Еда</h3>
-              <p>Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
+            <li class="services-item">
+              <div class="services-item-food">
+                <h3>Еда</h3>
+                <p>Всегда заказывайте топовый фирменный бургер,вы не разочаруетесь!</p>
+              </div>
             </li>
-            <li class="services-item services-item-souvenirs ">
-              <h3>Сувениры</h3>
-              <p>Не только китайского,но и настоящего местного производства!</p>
+            <li class="services-item">
+              <div class="services-item-souvenirs">
+                <h3>Сувениры</h3>
+                <p>Не только китайского,но и настоящего местного производства!</p>
+              </div>
             </li>
           </ul>
         </section>
