--- a/index.html
+++ b/index.html
@@ -105,19 +105,19 @@
             <li class="services-item">
               <div class="services-item-house">
                 <h3>Жилье</h3>
-                <p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+                <p>Рекомендуем пожить в&nbsp;настоящем мотеле, всё&nbsp;как&nbsp;в кино!</p>
               </div>
             </li>
             <li class="services-item">
               <div class="services-item-food">
                 <h3>Еда</h3>
-                <p>Всегда заказывайте топовый фирменный бургер,вы не разочаруетесь!</p>
+                <p>Всегда заказывайте топовый&nbsp;фирменный&nbsp;бургер, вы не разочаруетесь!</p>
               </div>
             </li>
             <li class="services-item">
               <div class="services-item-souvenirs">
                 <h3>Сувениры</h3>
-                <p>Не только китайского,но и настоящего местного производства!</p>
+                <p>Не только китайского, но&nbsp;и&nbsp;настоящего местного производства!</p>
               </div>
             </li>
           </ul>
