--- a/catalog.html
+++ b/catalog.html
@@ -47,7 +47,7 @@
                 </a>
               </li>
               <li class="menu-item">
-                <a class="menu-button button-state" href="#">Хочу сюда!</a>
+                <a class="menu-button" href="#">Хочу сюда!</a>
               </li>
             </ul>
           </nav>
