--- a/catalog.html
+++ b/catalog.html
@@ -73,6 +73,7 @@
               </li>
             </ul>
             <h2 class="visually-hidden">Список гостиниц с фильтрами</h2>
+            <!-- Фильтрация -->
             <form class="catalog-filter" action="https://echo.htmlacademy.ru" method="get">
               <fieldset class="catalog-filter-group">
                 <legend class="catalog-filter-title">Инфраструктура</legend>
@@ -120,11 +121,37 @@
                   </li>
                 </ul>
               </fieldset>
-              <div class="button-container-filter">
-                <button class="button-catalog-filter button-submit " type="submit">Применить</button>
-                <button class="button-catalog-filter button-reset" type="reset">Сбросить</button>
-              </div>
-            </form>
+              <form class="catalog-filter" action="https://echo.htmlacademy.ru/" method="get">
+                <fieldset class="catalog-filter-group">
+                  <legend class="catalog-filter-title">Цена:</legend>
+
+                  <div class="range">
+                    <div class="range-scale">
+                      <div class="range-bar" style="left: 42px; width: 136px">
+                        <button class="range-toggle toggle-min">
+                          <span class="visually-hidden">Изменить минимальную цену.</span>
+                        </button>
+                        <button class="range-toggle toggle-max">
+                          <span class="visually-hidden">Изменить максимальную цену.</span>
+                        </button>
+                      </div>
+                    </div>
+
+                    <div class="range-wrapper-inputs">
+                      <label class="catalog-filter-label">
+                        от <input class="range-input" type="number" value="1000" name="min-price"> ₽
+                      </label>
+                      <label class="catalog-filter-label">
+                        до <input class="range-input" type="number" value="100000" name="max-price" style="width: 37px"> ₽
+                      </label>
+                    </div>
+                  </div>
+                </fieldset>
+                <div class="button-container-filter">
+                  <button class="button-catalog-filter button-submit " type="submit">Применить</button>
+                  <button class="button-catalog-filter button-reset" type="reset">Сбросить</button>
+                </div>
+              </form>
           </div>
         </section>
         <div class="select-container">
