--- a/catalog.html
+++ b/catalog.html
@@ -123,9 +123,16 @@
               </fieldset>
               <form class="catalog-filter" action="https://echo.htmlacademy.ru/" method="get">
                 <fieldset class="catalog-filter-group">
-                  <legend class="catalog-filter-title">Цена:</legend>
-
+                  <legend class="catalog-filter-title">Стоимость, ₽::</legend>
                   <div class="range">
+                    <div class="range-wrapper-inputs">
+                      <label class="catalog-filter-label">
+                        <input class="range-input" type="number" value="1000" name="min-price" style="width: 143px"> ₽
+                      </label>
+                      <label class="catalog-filter-label">
+                        <input class="range-input" type="number" value="100000" name="max-price" style="width: 143px"> ₽
+                      </label>
+                    </div>
                     <div class="range-scale">
                       <div class="range-bar" style="left: 42px; width: 136px">
                         <button class="range-toggle toggle-min">
@@ -135,15 +142,6 @@
                           <span class="visually-hidden">Изменить максимальную цену.</span>
                         </button>
                       </div>
-                    </div>
-
-                    <div class="range-wrapper-inputs">
-                      <label class="catalog-filter-label">
-                        от <input class="range-input" type="number" value="1000" name="min-price"> ₽
-                      </label>
-                      <label class="catalog-filter-label">
-                        до <input class="range-input" type="number" value="100000" name="max-price" style="width: 37px"> ₽
-                      </label>
                     </div>
                   </div>
                 </fieldset>
