--- a/catalog.html
+++ b/catalog.html
@@ -123,18 +123,16 @@
               </fieldset>
               <form class="catalog-filter" action="https://echo.htmlacademy.ru/" method="get">
                 <fieldset class="catalog-filter-group">
-                  <legend class="catalog-filter-title">Стоимость, ₽::</legend>
+                  <legend class="catalog-filter-title">Стоимость, ₽:</legend>
                   <div class="range">
                     <div class="range-wrapper-inputs">
-                      <label class="catalog-filter-label">
-                        <input class="range-input" type="number" value="1000" name="min-price" style="width: 143px"> ₽
-                      </label>
-                      <label class="catalog-filter-label">
-                        <input class="range-input" type="number" value="100000" name="max-price" style="width: 143px"> ₽
-                      </label>
+                        <input class="range-input" type="number" value="1000" name="min-price"
+                          style=" width: 143px">
+                        <input class="range-input" type="number" value="100000" name="max-price"
+                          style=" width: 143px">
                     </div>
                     <div class="range-scale">
-                      <div class="range-bar" style="left: 42px; width: 136px">
+                      <div class="range-bar" style="left: 42px; width: 287px">
                         <button class="range-toggle toggle-min">
                           <span class="visually-hidden">Изменить минимальную цену.</span>
                         </button>
