--- a/catalog.html
+++ b/catalog.html
@@ -132,7 +132,7 @@
                         style=" width: 143px">
                     </div>
                     <div class="range-scale">
-                      <div class="range-bar" style="left: 42px; width: 287px">
+                      <div class="range-bar" style="left: 0; width: 226px">
                         <button class="range-toggle toggle-min">
                           <span class="visually-hidden">Изменить минимальную цену.</span>
                         </button>
