--- a/catalog.html
+++ b/catalog.html
@@ -81,19 +81,25 @@
                   <li class="catalog-filter-item">
                     <label class="control">
                       <input class="control-input" type="checkbox" name="swimming pool" checked>
-                      Бассейн
+                      <span class="control-label">
+                        Бассейн
+                      </span>
                     </label>
                   </li>
                   <li class="catalog-filter-item">
                     <label class="control">
                       <input class="control-input" type="checkbox" name="parking" checked>
-                      Парковка
+                      <span class="control-label">
+                        Парковка
+                      </span>
                     </label>
                   </li>
                   <li class="catalog-filter-item">
                     <label class="control">
                       <input class="control-input" type="checkbox" name="Wi-Fi">
-                      Wi-Fi
+                      <span class="control-label">
+                        Wi-Fi
+                      </span>
                     </label>
                   </li>
                 </ul>
@@ -104,19 +110,25 @@
                   <li class="catalog-filter-item">
                     <label class="control">
                       <input class="control-input" type="radio" name="product-group" checked>
-                      Гостиница
+                      <span class="control-label">
+                        Гостиница
+                      </span>
                     </label>
                   </li>
                   <li class="catalog-filter-item">
                     <label class="control">
                       <input class="control-input" type="radio" name="product-group">
-                      Мотель
+                      <span class="control-label">
+                        Мотель
+                      </span>
                     </label>
                   </li>
                   <li class="catalog-filter-item">
                     <label class="control">
                       <input class="control-input" type="radio" name="product-group">
-                      Апартаменты
+                      <span class="control-label">
+                        Апартаменты
+                      </span>
                     </label>
                   </li>
                 </ul>
@@ -127,9 +139,9 @@
                   <div class="range">
                     <div class="range-wrapper-inputs">
                       <input class="range-input range-min" type="number" value="1000" name="min-price"
-                        style=" width: 143px">
+                        style=" width: 121px">
                       <input class="range-input range-max" type="number" value="100000" name="max-price"
-                        style=" width: 143px">
+                        style=" width: 121px">
                     </div>
                     <div class="range-scale">
                       <div class="range-bar" style="left: 0; width: 226px">
