--- a/catalog.html
+++ b/catalog.html
@@ -144,10 +144,10 @@
                   <legend class="catalog-filter-title">Стоимость, ₽:</legend>
                   <div class="range">
                     <div class="range-wrapper-inputs">
-                      <input class="range-input range-min" type="number" value="1000" name="min-price"
-                        style=" width: 121px">
-                      <input class="range-input range-max" type="number" value="100000" name="max-price"
-                        style=" width: 121px">
+                      <input class="range-input range-min" type="number" value="" name="min-price"
+                        style=" width: 143px">
+                      <input class="range-input range-max"  type="number" value="" name="max-price"
+                        style=" width: 143px">
                     </div>
                     <div class="range-scale">
                       <div class="range-bar" style="left: 0; width: 226px">
