Стилизует модальное окно

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
       </button>
       <section class="modal-content">
         <h2 class="modal-title">Поиск гостиницы в Седоне</h2>
-
+<div class="modal-form-container"></div>
         <form class="date-form" action="https://echo.htmlacademy.ru/" method="post">
           <p class="field-group">
             <label class="modal-form-title" for="arrival-date">Дата Заезда</label>
@@ -202,17 +202,15 @@
           <div class="number-of-visitors">
           <p class="field-group">
             <label class="modal-form-title" for="grown-ups">Взрослые</label>
-            <input class="modal-form-text" type="number" id="grown-ups" name="grown-ups" placeholder="">
+            <input class="modal-form-text form-number" type="number" id="grown-ups" name="grown-ups" placeholder="">
           </p>
           <p class="field-group">
             <label class="modal-form-title" for="children">Дети</label>
-            <input class="modal-form-text" type="number" id="children" name="children" placeholder="">
+            <input class="modal-form-text form-number" type="number" id="children" name="children" placeholder="">
           </p>
         </div>
         </form>
-
       </section>
-
       <a class="modal-container-button">Найти</a>
     </div>
   </body>
