Стилизует модальное окно

--- a/index.html
+++ b/index.html
@@ -192,19 +192,19 @@
 <div class="modal-form-container"></div>
         <form class="date-form" action="https://echo.htmlacademy.ru/" method="post">
           <p class="field-group">
-            <label class="modal-form-title" for="arrival-date">Дата Заезда</label>
+            <label class="modal-form-title" for="arrival-date">Дата Заезда:</label>
             <input class="modal-form-text" type="date" id="arrival-date" name="arrival-date" placeholder="">
           </p>
           <p class="field-group">
-            <label class="modal-form-title" for="date-of-departure">Дата Выезда</label>
+            <label class="modal-form-title" for="date-of-departure">Дата Выезда:</label>
             <input class="modal-form-text" type="date" id="date-of-departure" name="date-of-departure" placeholder="">
           </p>
           <div class="number-of-visitors">
-          <p class="field-group">
+          <p class="quantity-group">
             <label class="modal-form-title" for="grown-ups">Взрослые</label>
             <input class="modal-form-text form-number" type="number" id="grown-ups" name="grown-ups" placeholder="">
           </p>
-          <p class="field-group">
+          <p class="quantity-group">
             <label class="modal-form-title" for="children">Дети</label>
             <input class="modal-form-text form-number" type="number" id="children" name="children" placeholder="">
           </p>
