добавляет состояние кнопке

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
         </div>
         </form>
       </section>
-      <a class="modal-container-button">Найти</a>
+      <a class="modal-container-button" href="#">Найти</a>
     </div>
   </body>
 
