добавляет текст в tooltip

--- a/index.html
+++ b/index.html
@@ -213,6 +213,8 @@
                     </svg>
                   </button>
                 </span>
+                <span class="tooltip-text">Укажите количество детей, которые будут с вами, возраст которых от 6 до 18 лет. Дети до 6 лет размещаются бесплатно.</span>
+              </span>
                 <input class="modal-form-text form-number" type="number" id="children" name="children" placeholder="">
               </p>
             </div>
