позиционирует tooltip-text

--- a/index.html
+++ b/index.html
@@ -205,8 +205,9 @@
                 <input class="modal-form-text form-number" type="number" id="grown-ups" name="grown-ups" placeholder="">
               </p>
               <p class="quantity-group">
+                <span class="form-label">
                 <label class="modal-form-title " for="children">Дети:</label>
-                <span class="tooltip">
+                <span class="tooltip ">
                   <button class="tooltip-toggle" type="button">
                     <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" viewBox="0 0 20 20">
                       <path fill="#fff" fill-rule="evenodd" d="M9 4h2v2H9V4Zm2 12H9V7h2v9Z" clip-rule="evenodd" />
@@ -217,6 +218,7 @@
                 </span>
                 </span>
                 <input class="modal-form-text form-number" type="number" id="children" name="children" placeholder="">
+                </span>
               </p>
             </div>
           </form>
