Добавляет оформление tooltip

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
               </p>
               <p class="quantity-group">
                 <span class="form-label form-label-icon">
-                <label class="modal-form-title " for="children">Дети: Дети: Дети:</label>
+                <label class="modal-form-title " for="children">Дети:</label>
                 <span class="tooltip ">
                   <button class="tooltip-toggle" type="button" aria-labelledby="tooltip-label-date">
                     <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" viewBox="0 0 20 20">
