Убирает стрелки в инпут

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
           </svg>
         </a>
       </footer>
-    <!-- </div>
+    </div>
     <div class="modal-container">
       <div class="modal modal-auth">
         <button class="modal-close-button">
@@ -224,7 +224,7 @@
           </form>
         </section>
         <a class="modal-container-button" href="#">Найти</a>
-      </div> -->
+      </div>
   </body>
 
 </html>
