Изменяет тип input

--- a/index.html
+++ b/index.html
@@ -193,16 +193,16 @@
           <form class="date-form" action="https://echo.htmlacademy.ru/" method="post">
             <p class="field-group">
               <label class="modal-form-title" for="arrival-date">Дата Заезда:</label>
-              <label>
-              <input class="modal-form-text" type="date" id="arrival-date" name="arrival-date" placeholder="">
+              <label class="data-icon">
+              <input class="modal-form-text" type="text" id="arrival-date" name="arrival-date" placeholder="27 апреля 2020">
                 <span class="data-information data-error">Мы не можем отправить вас в прошлое.</span>
               </label>
             </p>
             <p class="field-group">
               <label class="modal-form-title" for="date-of-departure">Дата Выезда:</label>
-              <label>
-                <input class="modal-form-text" type="date" id="date-of-departure" name="date-of-departure"
-                  placeholder="">
+              <label class="data-icon">
+                <input class="modal-form-text" type="text" id="date-of-departure" name="date-of-departure"
+                  placeholder="1 сентября 2021">
                 <span class="data-information">На эти даты есть свободные номера. Пока есть.</span>
               </label>
             </p>
