--- a/index.html
+++ b/index.html
@@ -192,18 +192,18 @@
           <form class="date-form" action="https://echo.htmlacademy.ru/" method="post">
             <p class="field-group">
               <label class="modal-form-title" for="arrival-date">Дата Заезда:</label>
-              <label class="data-icon">
+              <span class="data-icon">
                 <input class="modal-form-text" type="text" id="arrival-date" name="arrival-date" placeholder="">
                 <span class="data-information data-error">Мы не можем отправить вас в прошлое.</span>
-              </label>
+              </span>
             </p>
             <p class="field-group">
               <label class="modal-form-title" for="date-of-departure">Дата Выезда:</label>
-              <label class="data-icon">
+              <span class="data-icon">
                 <input class="modal-form-text" type="text" id="date-of-departure" name="date-of-departure"
                   placeholder="">
                 <span class="data-information">На эти даты есть свободные номера. Пока есть.</span>
-              </label>
+              </span>
             </p>
             <div class="number-of-visitors">
               <p class="quantity-group">
