--- a/catalog.html
+++ b/catalog.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <title>Каталог</title>
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="icon" href="/700af592b10efb59bc40bfadf0c8e61e.ico/favicon.ico"> <!-- 32×32 -->
   </head>
 
   <body>
