--- a/catalog.html
+++ b/catalog.html
@@ -17,14 +17,14 @@
           </a>
           <nav class="navigation">
             <ul class="site-navigation">
-              <li class="site-navigation-item">
-                <a class="navigation-link" href="index.html">Главная</a>
+              <li class="site-navigation-item ">
+                <a class="navigation-link active-link" href="index.html">Главная</a>
               </li>
               <li class="site-navigation-item">
-                <a class="navigation-link" href="about.html">О седоне</a>
+                <a class="navigation-link" href="about.html">О Седоне</a>
               </li>
-              <li class="site-navigation-item">
-                <a class="navigation-link active-link" href="catalog.html">Гостиницы</a>
+              <li class="site-navigation-item ">
+                <a class="navigation-link " href="catalog.html">Гостиницы</a>
               </li>
             </ul>
             <ul class="menu">
