--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <a class="navigation-link active-link" href="index.html">Главная</a>
               </li>
               <li class="site-navigation-item">
-                <a class="navigation-link" href="about.html"> О седоне</a>
+                <a class="navigation-link" href="about.html"> О Седоне</a>
               </li>
               <li class="site-navigation-item">
                 <a class="navigation-link" href="catalog.html">Гостиницы</a>
