исправляет advantages-item

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             </li>
             <li class="advantages-item advantages-item-wide">
               <div class="advantages-item-text ">
-                <h3>Там есть мост дьявола</h3>
+                <h3>Там есть&nbsp; мост дьявола</h3>
                 <p>Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
               </div>
               <div class="advantages-item-img">
