--- a/catalog.html
+++ b/catalog.html
@@ -77,7 +77,7 @@
             <!-- Фильтрация -->
             <form class="catalog-filter" action="https://echo.htmlacademy.ru" method="get">
               <fieldset class="catalog-filter-group filter-infrastructure">
-                <legend class="catalog-filter-title">Инфраструктура</legend>
+                <legend class="catalog-filter-title">Инфраструктура:</legend>
                 <ul class="catalog-filter-list">
                   <li class="catalog-filter-item">
                     <label class="control">
@@ -109,7 +109,7 @@
                 </ul>
               </fieldset>
               <fieldset class="catalog-filter-group filter-type-house">
-                <legend class="catalog-filter-title ">Тип Жилья</legend>
+                <legend class="catalog-filter-title ">Тип Жилья:</legend>
                 <ul class="catalog-filter-list">
                   <li class="catalog-filter-item">
                     <label class="control">
@@ -147,12 +147,12 @@
                     <label class="range-form-field-text">
                       <input class="range-input range-min" type="number" value="0" name="min-price"
                         style=" width: 143px" placeholder="">
-                      <span>от</span>
+                      <span class="range-min-span">от</span>
                     </label>
                     <label class="range-form-field-text">
                       <input class="range-input range-max" type="number" value="9000" name="max-price"
                         style=" width: 143px" placeholder="">
-                      <span>до</span>
+                      <span class="range-max-span">до</span>
                     </label>
                   </div>
                 </div>
