--- a/catalog.html
+++ b/catalog.html
@@ -248,7 +248,7 @@
             <p>Гостиница</p>
             <span class="product-card-price">От 5000 ₽</span>
             <a class="product-card-button" href="#">Подробнее</a>
-            <a class="product-card-button-favorites button-active" href="#">В избранноe</a>
+            <a class="product-card-button-favorites button-active" href="#">В избранном</a>
             <div class="stars stars-four"></div>
             <div class="rating">Рейтинг: 9,2</div>
           </li>
