добавляет состояние disaible кнопке подписаться

--- a/catalog.html
+++ b/catalog.html
@@ -39,7 +39,8 @@
               </li>
               <li class="menu-item">
                 <a class="menu-link" href="#">
-                  <svg aria-hidden="true" class="heart" focusable="false" xmlns="http://www.w3.org/2000/svg" width="20" height="20">
+                  <svg aria-hidden="true" class="heart" focusable="false" xmlns="http://www.w3.org/2000/svg" width="20"
+                    height="20">
                     <path fill="currentColor"
                       d="M9.9 19a.9.9 0 0 1-.8-.4c-5.4-6.1-6.7-7.5-7-7.9A5.4 5.4 0 0 1 6.5 2C7.8 2 9 2.5 10 3.3a5.46 5.46 0 0 1 9 4.1c0 1.3-.5 2.5-1.3 3.4l-7 7.9c-.2.2-.4.3-.8.3Zm-6-9.5c.3.4 3.5 4 6.1 6.9l6.2-7c.5-.5.7-1.2.7-2 0-1.8-1.5-3.3-3.3-3.3-1 0-2 .5-2.7 1.3-.3.3-.6.4-.9.4-.3 0-.6-.2-.8-.4-.7-.8-1.7-1.3-2.7-1.3-1.8 0-3.3 1.5-3.3 3.3-.1.9.3 1.6.7 2.1-.1 0-.1 0 0 0Z" />
                   </svg>
@@ -145,25 +146,25 @@
                 <div class="range">
                   <div class="range-wrapper-inputs">
                     <label class="range-form-field-text">
-                      <input class="range-input range-min" type="number" value="" name="min-price"
-                        style=" width: 143px" placeholder="0">
+                      <input class="range-input range-min" type="number" value="" name="min-price" style=" width: 143px"
+                        placeholder="0">
                       <span class="range-min-span">от</span>
                     </label>
                     <label class="range-form-field-text">
-                      <input class="range-input range-max" type="number" value="" name="max-price"
-                        style=" width: 143px" placeholder="9000">
+                      <input class="range-input range-max" type="number" value="" name="max-price" style=" width: 143px"
+                        placeholder="9000">
                       <span class="range-max-span">до</span>
                     </label>
                   </div>
                 </div>
-                  <div class="range-scale">
-                    <div class="range-bar" style="left: 0; width: 226px">
-                      <button class="range-toggle toggle-min" type="button">
-                        <span class="visually-hidden">Изменить минимальную цену.</span>
-                      </button>
-                      <button class="range-toggle toggle-max" type="button">
-                        <span class="visually-hidden">Изменить максимальную цену.</span>
-                      </button>
+                <div class="range-scale">
+                  <div class="range-bar" style="left: 0; width: 226px">
+                    <button class="range-toggle toggle-min" type="button">
+                      <span class="visually-hidden">Изменить минимальную цену.</span>
+                    </button>
+                    <button class="range-toggle toggle-max" type="button">
+                      <span class="visually-hidden">Изменить максимальную цену.</span>
+                    </button>
                   </div>
                 </div>
               </fieldset>
@@ -305,7 +306,7 @@
               <label for="subscription-email"></label>
               <input class="field active-pagination" placeholder="Ваш e-mail" type="email" name="subscription-email"
                 id="subscription-email" required>
-              <button class="button-subscription-button button-state" type="submit">Подписаться</button>
+              <button class="button-subscription-button" type="submit">Подписаться</button>
             </form>
           </div>
         </section>
