:heavy_check_mark: Сборка #10

--- a/10/index.html
+++ b/10/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>HTML Academy:Седона</title>
     <link rel="stylesheet" href="styles/styles.css">
-    <link rel="icon" href="/700af592b10efb59bc40bfadf0c8e61e.ico/favicon.ico"> <!-- 32×32 -->
+    <link rel="icon" href="700af592b10efb59bc40bfadf0c8e61e.ico/favicon.ico" type="image/x-icon"> <!-- 32×32 -->
     <base href="https://htmlacademy-htmlcss.github.io/2518753-sedona-1/10/">
 </head>
 
