:heavy_check_mark: Сборка #10

--- a/10/index.html
+++ b/10/index.html
@@ -62,9 +62,8 @@
           <img class="welcome" src="images/welcome-sedona.svg" width="458" height="352" alt="добро пожаловать в Седону">
         </section>
         <div class="hero-advantages">
-          <p class="lead">Седона — небольшой городок в Аризоне,
-            заслуживающий большего!</p>
-          <p>Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
+          <p class="lead">Седона&nbsp;—&nbsp;небольшой&nbsp;городок&nbsp;в&nbsp;Аризоне, заслуживающий&nbsp;большего!</p>
+          <p>Рассмотрим причины, по которым Седона круче, чем&nbsp;Гранд-Каньон!</p>
         </div>
         <section class="advantages">
           <h2 class="visually-hidden">Преимущества Седоны</h2>
