добавляет обязательные поля

--- a/index.html
+++ b/index.html
@@ -195,7 +195,8 @@
             <div class="field-group">
               <label class="modal-form-title" for="arrival-date">Дата Заезда:</label>
               <div class="data-icon">
-                <input class="modal-form-text" type="text" id="arrival-date" name="arrival-date" placeholder="">
+                <input class="modal-form-text" type="text" id="arrival-date" name="arrival-date" placeholder=""
+                  required>
                 <span class="data-information data-error">Мы не можем отправить вас в прошлое.</span>
               </div>
             </div>
@@ -203,7 +204,7 @@
               <label class="modal-form-title" for="date-of-departure">Дата Выезда:</label>
               <div class="data-icon">
                 <input class="modal-form-text" type="text" id="date-of-departure" name="date-of-departure"
-                  placeholder="">
+                  placeholder="" required>
                 <span class="data-information">На эти даты есть свободные номера. Пока есть.</span>
               </div>
             </div>
@@ -215,7 +216,7 @@
                       class="minus" width="14" height="2" fill="currentColor" viewBox="0 0 14 2">
                       <path d="M0 0v2h14V0H0Z" />
                     </svg></button>
-                  <input class="form-number" type="number" id="grown-ups" name="grown-ups" placeholder="">
+                  <input class="form-number" type="number" id="grown-ups" name="grown-ups" placeholder="" required>
                   <button class="modal-button" type="button"><svg class="plus" xmlns="http://www.w3.org/2000/svg"
                       class="plus" width="14" height="14" fill="currentColor" viewBox="0 0 14 14">
                       <path d="M14 6H8V0H6v6H0v2h6v6h2V8h6V6Z" />
