Добавляет  required , изменяет состояние радиокнопок

--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                       <path d="M0 0v2h14V0H0Z" />
                     </svg>
                   </button>
-                  <input class="form-number" type="number" id="children" name="children" placeholder="">
+                  <input class="form-number" type="number" id="children" name="children" placeholder="" required>
                   <button class="modal-button" type="button"><span class="visually-hidden">Прибавить колличество
                       посетителей</span><svg xmlns="http://www.w3.org/2000/svg" width="14" height="14"
                       fill="currentColor" viewBox="0 0 14 14">
